# bsa

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.ui  PackageInfo.txt  Project.cmake  Qt.cmake  UI.cmake  application.qrc  include.cmake  main.cpp  utils.cpp  utils.h
Modules/: FindBPSQt.cmake  FindDeploy.cmake
